修改使用java镜像做基础镜像

--- a/docker-jar/Dockerfile
+++ b/docker-jar/Dockerfile
@@ -1,6 +1,6 @@
 #插入以下内容
 #使用的基础镜像
-FROM	openjdk:8-jre-alpine
+FROM	java:8u111-jdk-alpine
 
 #作者信息
 MAINTAINER	rudolph "rudolph_zhong@qq.com"
@@ -8,21 +8,19 @@ MAINTAINER	rudolph "rudolph_zhong@qq.com"
 #环境准备
 RUN	mkdir -p /jar && \
 	mkdir -p /logs && \
+	rm -rf /var/lib/apt/lists/* && \
 	echo 'root:password' | chpasswd
 
 # ==> 配置编码环境和JAVA环境变量
 ENV	LANG="zh_CN.UTF-8" \
 	LANGUAGE="zh_CN.UTF-8" \
-	LC_ALL="zh_CN.UTF-8" 
+	LC_ALL="zh_CN.UTF-8" \
+	TZ="Asia/Shanghai"
 
 #暴露8080端口
 EXPOSE	8080
 
-#启动时运行tomcat
+#启动时运行jar
 WORKDIR	/jar
-ENTRYPOINT	java -jar *.jar >> /logs/jar_running.log 2>&1 && \
-		tail -f /var/log/jar_running.log
-
-# ==> 容器健康检查
-HEALTHCHECK --interval=2s --timeout=3s \
-	CMD	telnet 127.0.0.1 8080 || exit 1
+ENTRYPOINT	java -jar *.jar >> /logs/jar.log 2>&1 && \
+			tail -f /logs/jar_running.log
