--- a/docker-jar/Dockerfile
+++ b/docker-jar/Dockerfile
@@ -18,4 +18,4 @@ ENV	LANG="zh_CN.UTF-8" \
 #启动时运行jar
 WORKDIR	/jar
 CMD	java -jar *.jar >> /logs/jar_running.log 2>&1 && \
-	tail -f /logs/jar_running.log &
+	tail -f /logs/jar_running.log
